--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
@@ -41,7 +41,8 @@
             Starts charging the specified charge attack.
             <br><br>
             This function initiates the charging process for an attack, adhering to a predefined duration specified by the attack's configuration. If this set duration is surpassed,
-            the character is compelled to either cancel or release the attack. The amount of charge accumulated during the charging period is stored in seconds within the
+            the character is compelled to either cancel or release the attack depending on the selected option in the <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>
+            scriptable object. The amount of charge accumulated during the charging period is stored in seconds within the
             <a class="redirect-link" href="../PUBLIC-PROPERTIES/charge-timer.html">ChargeTimer</a> property.
         </p>
         <br>
