--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -41,6 +41,9 @@
             <li>Wall Sliding</li>
         </ul>
         <p>
+            This class is also designed to interact with the <a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a>
+            class and accommodate any movement restrictions that the combat system may specify.
+            <br>
             You can inherit from this class to create custom humanoid characters, controlled by a <b>player</b> and/or an <b>AI</b>, with dynamic and
             responsive behaviours.
         </p>
