--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/can-move-while-casting-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/can-move-while-casting-attack.html
@@ -20,7 +20,7 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CanMoveWhileCastingAttack</h1>
         <h2>Declaration</h2>
-        <p>public void <b>CanMoveWhileCastingAttack</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> <b>horizontalVelocity</b>);</p>
+        <p>public void <b>CanMoveWhileCastingAttack</b>(ref <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> <b>horizontalVelocity</b>);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
@@ -34,19 +34,44 @@
         <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Manipulates the velocity of the character for the duration of the attack.
+            <br><br>
+            Based on the attack configuration, the combat system may restrict the character's movement by manipulating their velocity. To facilitate this, it is necessary
+            to call this function immediately after calculating the character's velocity in your custom controller's script.
         </p>
         <br>
         <p>
-            Example paragraph goes here.
+            In the example below, the usage of the function is demonstrated.
         </p>
 
 <pre class="code-block">
 using UnityEngine;
 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>))]
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code.
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a> characterRb;
+    
+    private <a class="redirect-link" href="../character-combat.html">CharacterCombat</a> characterCombat;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        characterCombat = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>&gt;();
+        characterRb = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        Vector2 velocity = characterRb.velocity;
+        velocity.x = CharacterHorizontalVelocity();
+        characterCombat.<b>CanMoveWhileCastingAttack</b>(ref velocity);
+        characterRb.velocity = velocity;
+    }
+
+    private float CharacterHorizontalVelocity()
+    {
+        // Your code to calculate the velocity of your character on the X axis.
+    }
 }
 </pre>
 </div>
