--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/cancel-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/cancel-charge-attack.html
@@ -27,26 +27,56 @@
             <table>
                 <tr>
                     <td class="label"><b>attackData</b></td>
-                    <td class="description">The scriptable object (AttackSO) that holds the data of the attack.</td>
+                    <td class="description">The scriptable object (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>) that holds the data of the attack.</td>
                 </tr>
             </table>
         </div>
         <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Cancels the current charge attack.
+            <br><br>
+            Upon invoking the <a class="redirect-link" href="perform-charge-attack.html">PerformChargeAttack</a> function, the ongoing charge for the attack can be canceled by
+            calling this function. If the attack is set to automatically cancel when held for a duration surpassing the specified time (<a class="redirect-link" href="../PUBLIC-PROPERTIES/hold-attack-timer.html">HoldAttackTimer</a>),
+            the <a class="redirect-link" href="perform-charge-attack.html">PerformChargeAttack</a> function will trigger this cancellation automatically.
+            However, you can call this function manually if a certain condition is met.
         </p>
         <br>
         <p>
-            Example paragraph goes here.
+            Here is an example of how you can use this function.
         </p>
-
 <pre class="code-block">
 using UnityEngine;
 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>))]
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code.
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> exampleAttack;
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> projectileSpawnPoint;
+    
+    private <a class="redirect-link" href="../character-combat.html">CharacterCombat</a> characterCombat;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        characterCombat = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKey.html">Input.GetKey</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
+        {
+            characterCombat.<a class="redirect-link" href="perform-charge-attack.html">PerformChargeAttack</a>(exampleAttack, projectileSpawnPoint);
+
+            if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.C</a>))
+            {
+                characterCombat.<b>CancelChargeAttack</b>(exampleAttack);
+            }
+        }
+        else if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyUp.html">Input.GetKeyUp</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
+        {
+            characterCombat.<a class="redirect-link" href="try-release-charge-attack.html">TryReleaseChargeAttack</a>(exampleAttack);
+        }
+    }
 }
 </pre>
 </div>
