--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-PROPERTIES/hold-attack-timer.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-PROPERTIES/hold-attack-timer.html
@@ -57,7 +57,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
             characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a>(exampleAttack);
         }
 
-        if (characterCombat.IsCharging)
+        if (characterCombat.<a class="redirect-link" href="is-charging.html">IsCharging</a>)
         {
             <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("Your character will be forced to take an action in: " + characterCombat.<b>HoldAttackTimer</b> + " seconds.");
         }
