--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/try-release-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/try-release-charge-attack.html
@@ -42,7 +42,7 @@
         </p>
         <br>
         <p>
-            Example paragraph goes here.
+            Here is an example of how the function should be invoked.
         </p>
 
 <pre class="code-block">
