--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -56,7 +56,7 @@
                 <tr>
                     <td class="label-classes">AttackSO</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ATTACK-SO/attack-so.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CombatSystemProjectile</td>
