--- a/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
@@ -190,16 +190,12 @@
                     <td class="description">Set to 'true' if your attack should throw a projectile.</td>
                 </tr>
                 <tr>
-                    <td class="label"><span class="properties">ProjectileDamage</span></td>
-                    <td class="description">How much damage should the projectile deal.</td>
-                </tr>
-                <tr>
                     <td class="label"><span class="properties">ScalableProjectileDamage</span></td>
-                    <td class="description">Determines if the attack damage should scale with the level of charge applied.</td>
+                    <td class="description">Determines if the damage of the projectile should scale with the level of charge applied.</td>
                 </tr>
                 <tr>
-                    <td class="label"><span class="properties">MinimumProjectileDamage</span></td>
-                    <td class="description">Minimum damage of the projectile.</td>
+                    <td class="label"><span class="properties">ScalableProjectileVelocity</span></td>
+                    <td class="description">Determines if the velocity of the projectile should scale with the level of charge applied.</td>
                 </tr>
                 <tr>
                     <td class="label"><span class="properties">ChooseRandomFromList</span></td>
@@ -211,7 +207,7 @@
                 </tr>
                 <tr>
                     <td class="label"><span class="properties">ProjectilePrefabs</span></td>
-                    <td class="description">Projectile to spawn.</td>
+                    <td class="description">Projectile to spawn. (Choose random from list)</td>
                 </tr>
                 <tr>
                     <td class="label"><span class="properties">ThrowAtPercentage</span></td>
