--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
@@ -28,6 +28,9 @@
         <h2>Description</h2>
         <p>
             Description of the combat system projectile class goes here.
+            <br><br>
+            <b style="text-decoration: underline;">**IMPORTANT TO ADD**</b> <br>
+            For an object to take damage from a projectile, it needs to implement the IDamageable interface.
         </p>
         <br>
         <div class="table-division">
